--- a/public/views/logon/login.pug
+++ b/public/views/logon/login.pug
@@ -1,6 +1,9 @@
 html
   head
-    title hello m8
+    title Welcome
+    script(src='/js/jquery.min.js')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
+    script(src='/js/bootstrap.min.js')
 
 
 
@@ -13,7 +16,7 @@ html
           td
             label Username:     
           td
-            input(type='text', name='username', id='usern', required) 
+            input(type='text', name='username', id='usern' required) 
         tr
           td
             label Password:     
